--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <h3 class="project-title">Generátor hesla</h3>
                     <div class="project-description">
                         <p>Možnost si vygenerovat heslo podle různých kritérií</p>
+                        <br>
+                        <p>- používání array funkce filter</p>
+                        <p>- používání objektů</p>
                     </div>
                     <div class="project-bottom">
                         <ul class="project-tech-list">
