--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
                 </a>
             </li>
             <li class="project__grid-item" data-item="css">
+                <a href="https://codepen.io/sqerry-the-vuer/pen/XWzBKQa" target="_blank">
+                    <img src="./img/Screenshot_29.png" alt="">
+                    <h3 class="project-title">User grid komponent</h3>
+                    <div class="project-description">
+                        <p>- Pro účel procvičení CSS Grid a grid template areas</p>
+                    </div>
+                    <div class="project-bottom">
+                        <ul class="project-tech-list">
+                            <li>CSS</li>
+                            <li>CSS Grid</li>
+                        </ul>
+                    </div>
+                </a>
+            </li>
+            <li class="project__grid-item" data-item="css">
                 <a href=https://sunny-landing-page-one.vercel.app/" target="_blank">
                     <img src="./img/sunny.png" alt="">
                     <h3 class="project-title">Landing page</h3>
